fix image uploader/selection on mobile devices

--- a/res/less/components/editor.less
+++ b/res/less/components/editor.less
@@ -1,5 +1,6 @@
 .editor-dialog {
     width: 400px;
+    max-width: 100vw;
     overflow: hidden;
     padding: 1rem;
     background-color: white;
